src/pj/poco/test/neg/NAMPER04.POC
/* Tests for some wierdly placed ampersands */
#pragma poco echo "expect>expecting name in declaration got '&'"

struct foobar
	{
	int foo;
	char bar;
	} fb;

main()
{
int *&pt;

puts("This shouldn't compile");
}
